--- a/OneMore/OneMore/Views/Home/HomeViewController.xib
+++ b/OneMore/OneMore/Views/Home/HomeViewController.xib
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeViewController" customModule="OneMore" customModuleProvider="target">
             <connections>
-                <outlet property="imageView" destination="wc3-2e-u0O" id="aaG-lp-kBS"/>
+                <outlet property="contentView" destination="hlH-ZM-RCd" id="lIY-yy-1oE"/>
                 <outlet property="optionView" destination="ksI-LX-TOC" id="EQC-X3-ot7"/>
+                <outlet property="pageControl" destination="fDo-ka-Pex" id="haZ-6h-aMX"/>
+                <outlet property="scrollView" destination="p0b-Sy-Pwq" id="5bz-fq-TK6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -23,33 +23,56 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img1" translatesAutoresizingMaskIntoConstraints="NO" id="wc3-2e-u0O">
-                    <rect key="frame" x="0.0" y="20" width="375" height="241"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N3p-oj-jLr">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
+                    <subviews>
+                        <scrollView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" bounces="NO" scrollEnabled="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p0b-Sy-Pwq">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="230"/>
+                        </scrollView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hlH-ZM-RCd">
+                            <rect key="frame" x="0.0" y="230" width="375" height="20"/>
+                            <subviews>
+                                <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="7" translatesAutoresizingMaskIntoConstraints="NO" id="fDo-ka-Pex">
+                                    <rect key="frame" x="136.33333333333334" y="-9" width="103" height="37"/>
+                                </pageControl>
+                            </subviews>
+                            <color key="backgroundColor" red="0.13189087135533539" green="0.15424101089161482" blue="0.38258986398963735" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstItem="fDo-ka-Pex" firstAttribute="centerY" secondItem="hlH-ZM-RCd" secondAttribute="centerY" id="IIQ-yK-Hln"/>
+                                <constraint firstItem="fDo-ka-Pex" firstAttribute="centerX" secondItem="hlH-ZM-RCd" secondAttribute="centerX" id="nDz-aZ-QN6"/>
+                                <constraint firstAttribute="height" constant="20" id="v9H-qG-Lfn"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="wc3-2e-u0O" secondAttribute="height" multiplier="5:2" constant="-227.5" id="YYm-sg-G8a"/>
+                        <constraint firstAttribute="bottom" secondItem="hlH-ZM-RCd" secondAttribute="bottom" id="9W3-eE-OdK"/>
+                        <constraint firstItem="hlH-ZM-RCd" firstAttribute="leading" secondItem="N3p-oj-jLr" secondAttribute="leading" id="BiI-qU-9K3"/>
+                        <constraint firstAttribute="trailing" secondItem="p0b-Sy-Pwq" secondAttribute="trailing" id="Cwh-Zg-zaJ"/>
+                        <constraint firstItem="p0b-Sy-Pwq" firstAttribute="centerX" secondItem="N3p-oj-jLr" secondAttribute="centerX" id="DFe-OZ-7PD"/>
+                        <constraint firstAttribute="height" constant="250" id="PRK-7w-BQB"/>
+                        <constraint firstAttribute="trailing" secondItem="hlH-ZM-RCd" secondAttribute="trailing" id="a9K-VU-jMS"/>
+                        <constraint firstItem="hlH-ZM-RCd" firstAttribute="top" secondItem="p0b-Sy-Pwq" secondAttribute="bottom" id="j4r-Pa-SR1"/>
+                        <constraint firstItem="p0b-Sy-Pwq" firstAttribute="top" secondItem="N3p-oj-jLr" secondAttribute="top" id="tFe-Tb-oEW"/>
+                        <constraint firstItem="p0b-Sy-Pwq" firstAttribute="leading" secondItem="N3p-oj-jLr" secondAttribute="leading" id="v3t-I4-CrB"/>
                     </constraints>
-                </imageView>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ksI-LX-TOC">
-                    <rect key="frame" x="0.0" y="261" width="375" height="551"/>
+                    <rect key="frame" x="0.0" y="250" width="375" height="562"/>
+                    <color key="backgroundColor" red="0.1318908714" green="0.1542410109" blue="0.382589864" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="wc3-2e-u0O" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="W77-3v-Jwz"/>
-                <constraint firstItem="wc3-2e-u0O" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="XJs-uW-uun"/>
-                <constraint firstItem="ksI-LX-TOC" firstAttribute="width" secondItem="wc3-2e-u0O" secondAttribute="width" id="Y1V-O7-f3w"/>
-                <constraint firstItem="ksI-LX-TOC" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="YfQ-K9-qTL"/>
-                <constraint firstItem="ksI-LX-TOC" firstAttribute="top" secondItem="wc3-2e-u0O" secondAttribute="bottom" id="cky-bY-rGc"/>
-                <constraint firstAttribute="bottom" secondItem="ksI-LX-TOC" secondAttribute="bottom" id="hmv-ia-Wnp"/>
-                <constraint firstItem="wc3-2e-u0O" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="lAm-OO-Bhk"/>
-                <constraint firstItem="ksI-LX-TOC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="tzI-ap-nIB"/>
-                <constraint firstItem="wc3-2e-u0O" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="vlx-OE-gwZ"/>
+                <constraint firstItem="N3p-oj-jLr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="2Sa-ev-MZz"/>
+                <constraint firstItem="ksI-LX-TOC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="63o-Sy-W8S"/>
+                <constraint firstAttribute="trailing" secondItem="N3p-oj-jLr" secondAttribute="trailing" id="9Ro-e6-Avq"/>
+                <constraint firstItem="N3p-oj-jLr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="J1S-5I-uzE"/>
+                <constraint firstAttribute="bottom" secondItem="ksI-LX-TOC" secondAttribute="bottom" id="OD6-QR-LDk"/>
+                <constraint firstAttribute="trailing" secondItem="ksI-LX-TOC" secondAttribute="trailing" id="ehd-96-sGR"/>
+                <constraint firstItem="ksI-LX-TOC" firstAttribute="top" secondItem="N3p-oj-jLr" secondAttribute="bottom" id="zEh-yl-6cL"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="ZRs-Dr-hXp"/>
+            <nil key="simulatedTopBarMetrics"/>
             <point key="canvasLocation" x="32.5" y="56"/>
         </view>
     </objects>
-    <resources>
-        <image name="img1" width="750" height="500"/>
-    </resources>
 </document>
